--- a/osteoarticular.qmd
+++ b/osteoarticular.qmd
@@ -18,10 +18,28 @@ Video of lecture can be played below. Click on the "CC" button in the the video 
 
 **Further reading**
 
+[OVIVA trial](OVIVI_trial.pdf)
+[Short vs. long for prosthetic infections](short_long_prosth.pdf)
+[Management of MDR gram positive joint infections](Valour.pdf)
+[Suppressive antibiotic therapy](suppressive.pdf)
+[Managment of diabetic foot infections](diabeticfoot.pdf)
+[History of abx treatment of osteo](osteohistory.pdf)
+
+
 <br>
 
 ------------------------------------------------------------------------
 
-**Podcasts on related topics**
+**Podcasts on topics related to osteoarticuliar infections**
+
+The Socieity of Infectious Diseases Pharmacists (SIDP) has excellent podcasts on topics related to managing bone and joint infections with many physician experts:
+<br>
+
+[Antibiofilm approaches](https://breakpoints-sidp.org/110-a-bone-to-pick-biofilm-busters-for-prosthetic-joint-infections/)
+
+[Rifampin dosing in osteo](https://breakpoints-sidp.org/dosing-consult-rifampin-part-2/)
+
+[Prosthetic joint infections](https://breakpoints-sidp.org/67-nixing-the-nidus-managing-retained-sources-in-prosthetic-joint-infections/)
+
 
 <br>
