--- a/osteoarticular.qmd
+++ b/osteoarticular.qmd
@@ -18,12 +18,12 @@ Video of lecture can be played below. Click on the "CC" button in the the video 
 
 **Further reading**
 
-[OVIVA trial](OVIVI_trial.pdf)
-[Short vs. long for prosthetic infections](short_long_prosth.pdf)
-[Management of MDR gram positive joint infections](Valour.pdf)
-[Suppressive antibiotic therapy](suppressive.pdf)
-[Managment of diabetic foot infections](diabeticfoot.pdf)
-[History of abx treatment of osteo](osteohistory.pdf)
+[OVIVA trial](OVIVI_trial.pdf) <br>
+[Short vs. long for prosthetic infections](short_long_prosth.pdf) <br>
+[Management of MDR gram positive joint infections](Valour.pdf) <br>
+[Suppressive antibiotic therapy](suppressive.pdf) <br>
+[Managment of diabetic foot infections](diabeticfoot.pdf) <br>
+[History of abx treatment of osteo](osteohistory.pdf) <br>
 
 
 <br>
