--- a/febrileneutropenia.qmd
+++ b/febrileneutropenia.qmd
@@ -2,15 +2,15 @@
 title: "Febrile neutropenia"
 ---
 
-Recorded lecture:
+**Recorded lecture:**
 
 <br>
 
-Further reading: <br>
+**Further reading:** <br>
 
 [Recent review on febrile neutropenia](Douglas.pdf) <br> [How Long Study](Guisado.pdf) <br> [NCCN Infection Treatment Guidleines () Guidelines](nccn_infection.pdf)
 
-Slides:
+**Slides:**
 
 <br>
 
